# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-09-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_null to provide a null response
      (noreply does not provide a null response)
    * Change cloudi_service_null to only use the service pattern prefix
      for its subscription (so "*" is a valid catch-all prefix)

2017-09-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.7.2 released

2017-09-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update exometer_core
    * Update hackney

2017-09-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Move the Erlang integration tests to have a prefix of
      cloudi_service_test_ instead of cloudi_service_
    * Move the cloudi_service_request_rate to be included in the
      CloudI release
    * Add cloudi_service_null to be the equivalent of /dev/null

2017-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the default version of Python to 3
    * Add update of timeout_async and timeout_sync to
      cloudi_service_http_cowboy and cloudi_service_http_elli

2017-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand

2017-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the service configuration option response_timeout_immediate_max
      when request_name_lookup is set to async and a lookup timeout occurs
    * Fix cloudi_queue:send when PatternPid is provided as undefined

2017-09-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix release script to always succeed with stop (for openrc-run)
    * Improve configure script rebar check
    * Fix monkey_latency time_gaussian bug that would almost never occur
      (the Box-Mullter transformation X1 would need to be 0.0)
    * Update quickrand
    * Fix dialyzer execution to match the new paths of
      the Erlang integration tests
    * Add environment variable arguments