@@ -210,6 +210,11 @@
        {read, [{"/cloudi/log/cloudi.log", -16384}]},
        {refresh, 10}]},
      {dest_refresh, none}],
+    [{prefix, "*"},
+     {module, cloudi_service_null},
+     {args, [{debug, true}]},
+     {dest_refresh, none},
+     {options, [{response_timeout_immediate_max, limit_min}]}],
     [{prefix, "/tests/websockets/"},
      {module, cloudi_service_http_cowboy},
      {args, 
